pktfmt/src/old/tests/error_fmts/field_invalid_default3.pktfmt
// error: default should be a number
Field {
    bit = 5, 
    repr = u8,
    arg = u8,
    default = true,
}